--- a/renderer/main.html
+++ b/renderer/main.html
@@ -13,7 +13,9 @@
     </header>
     <main>
       <p id="no-items">No items</p>
-      <div id="items"></div>
+      <div id="items">
+        <div class="read-item"></div>
+      </div>
     </main>
 
     <div id="modal">
