--- a/renderer/main.html
+++ b/renderer/main.html
@@ -13,9 +13,7 @@
     </header>
     <main>
       <p id="no-items">No items</p>
-      <div id="items">
-        <div class="read-item"></div>
-      </div>
+      <div id="items"></div>
     </main>
 
     <div id="modal">
