--- a/renderer/static/main.html
+++ b/renderer/static/main.html
@@ -22,7 +22,7 @@
       <button id="close-modal">Cancel</button>
     </div>
     <script>
-        require('./app')
+        require('../app')
     </script>
   </body>
 </html>
